many silly mistakes were repaired

--- a/views/buildings/new_building.jade
+++ b/views/buildings/new_building.jade
@@ -1,4 +1,4 @@
-extends ..\layout
+extends ../layout
 block scripts
 	script(type='text/javascript', src='/javascripts/user/sign_log.js')
 block content
