--- a/views/buildings/setup_building.jade
+++ b/views/buildings/setup_building.jade
@@ -1,4 +1,4 @@
-include ..\layout
+include ../layout
 	block scripts
 		script(type='text/javascript', src='/javascripts/building/my_builds.js')
 	block content
