--- a/views/emails/nice.jade
+++ b/views/emails/nice.jade
@@ -1,4 +1,4 @@
-extends ..\layout
+extends ../layout
 block content
 	div.col-sm-6.col-xs-10.col-sm-offset-3.col-xs-offset-1
 		div.panel.panel-primary
