--- a/views/users/signup.jade
+++ b/views/users/signup.jade
@@ -1,4 +1,4 @@
-include ..\layout
+include ../layout
 	block scripts
 		script(type='text/javascript', src='/javascripts/user/sign_log.js')
 	block content
