--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -78,6 +78,28 @@ body
 	-webkit-border-radius: 2px 10px 10px 10px;
 	border: 0px solid #000000;
 }
+.button-messages
+{
+	margin-left:20px;
+	cursor:pointer;
+	font-size:2em;
+}
+.response
+{
+	margin-left:15px;
+}
+.response:hover
+{
+	color:blue;
+}
+.vote-favor:hover
+{
+	color:green;
+}
+.vote-against:hover
+{
+	color:red;
+}
 .button
 {
 	cursor:pointer;
@@ -152,24 +174,22 @@ h4, .h4 {
 {
 	width:100px;
 }
-.table
+.left
 {
-	//display:table;
-}
-.table-row
-{
-	//display:table-row;
-}
-.table-cell
-{
-	margin-left:10px;
-	//display:table-cell;
+	float:left !important;
 }
 .left-float
 {
 	margin-left:10px;
 	margin-bottom:20px;
 	float:left;
+}
+.user-message
+{
+	float:left;
+	color:#708090;
+	margin: 0 10px 0 0;
+	padding:0;
 }
 .selectable
 {
@@ -201,6 +221,54 @@ h4, .h4 {
 .margin-bottom
 {
 	margin-bottom: 2em;
+}
+.label-as-button
+{
+	cursor:pointer;
+}
+.label-as-button:hover
+{
+	background: rgba(248,58,48,1);
+	background: -moz-linear-gradient(left, rgba(248,58,48,1) 0%, rgba(241,96,91,1) 41%, rgba(240,28,25,1) 71%, rgba(246,18,14,1) 92%, rgba(231,39,42,1) 100%);
+	background: -webkit-gradient(left top, right top, color-stop(0%, rgba(248,58,48,1)), color-stop(41%, rgba(241,96,91,1)), color-stop(71%, rgba(240,28,25,1)), color-stop(92%, rgba(246,18,14,1)), color-stop(100%, rgba(231,39,42,1)));
+	background: -webkit-linear-gradient(left, rgba(248,58,48,1) 0%, rgba(241,96,91,1) 41%, rgba(240,28,25,1) 71%, rgba(246,18,14,1) 92%, rgba(231,39,42,1) 100%);
+	background: -o-linear-gradient(left, rgba(248,58,48,1) 0%, rgba(241,96,91,1) 41%, rgba(240,28,25,1) 71%, rgba(246,18,14,1) 92%, rgba(231,39,42,1) 100%);
+	background: -ms-linear-gradient(left, rgba(248,58,48,1) 0%, rgba(241,96,91,1) 41%, rgba(240,28,25,1) 71%, rgba(246,18,14,1) 92%, rgba(231,39,42,1) 100%);
+	background: linear-gradient(to right, rgba(248,58,48,1) 0%, rgba(241,96,91,1) 41%, rgba(240,28,25,1) 71%, rgba(246,18,14,1) 92%, rgba(231,39,42,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f83a30', endColorstr='#e7272a', GradientType=1 );
+}
+.label-as-button:active
+{
+	background: rgba(231,39,42,1);
+	background: -moz-linear-gradient(left, rgba(231,39,42,1) 0%, rgba(246,18,14,1) 8%, rgba(240,28,25,1) 29%, rgba(241,96,91,1) 59%, rgba(248,58,48,1) 100%);
+	background: -webkit-gradient(left top, right top, color-stop(0%, rgba(231,39,42,1)), color-stop(8%, rgba(246,18,14,1)), color-stop(29%, rgba(240,28,25,1)), color-stop(59%, rgba(241,96,91,1)), color-stop(100%, rgba(248,58,48,1)));
+	background: -webkit-linear-gradient(left, rgba(231,39,42,1) 0%, rgba(246,18,14,1) 8%, rgba(240,28,25,1) 29%, rgba(241,96,91,1) 59%, rgba(248,58,48,1) 100%);
+	background: -o-linear-gradient(left, rgba(231,39,42,1) 0%, rgba(246,18,14,1) 8%, rgba(240,28,25,1) 29%, rgba(241,96,91,1) 59%, rgba(248,58,48,1) 100%);
+	background: -ms-linear-gradient(left, rgba(231,39,42,1) 0%, rgba(246,18,14,1) 8%, rgba(240,28,25,1) 29%, rgba(241,96,91,1) 59%, rgba(248,58,48,1) 100%);
+	background: linear-gradient(to right, rgba(231,39,42,1) 0%, rgba(246,18,14,1) 8%, rgba(240,28,25,1) 29%, rgba(241,96,91,1) 59%, rgba(248,58,48,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e7272a', endColorstr='#f83a30', GradientType=1 );
+	-webkit-box-shadow: inset 4px 3px 33px 2px rgba(0,0,0,0.75);
+	-moz-box-shadow: inset 4px 3px 33px 2px rgba(0,0,0,0.75);
+	box-shadow: inset 4px 3px 33px 2px rgba(0,0,0,0.75);
+}
+.messages
+{
+	padding:5px;
+	padding-bottom:15px;
+	margin-bottom:20px;
+	-webkit-box-shadow: 5px 5px 30px 2px rgba(15,15,15,1);
+	-moz-box-shadow: 5px 5px 30px 2px rgba(15,15,15,1);
+	box-shadow: 5px 5px 30px 2px rgba(15,15,15,1);
+	
+}
+.show_messages
+{
+	color:blue;
+	cursor:pointer;
+}
+.show_messages:hover
+{
+	text-decoration:underline;
 }
 @media only screen and (max-width: 767px) 
 {
