--- a/views/buildings/admin_buildings.jade
+++ b/views/buildings/admin_buildings.jade
@@ -21,10 +21,10 @@ block content
 							div.row
 								div.col-xs-1
 									span.glyphicon.glyphicon-map-marker
-								div.col-sm-4.col-xs-6.inline.search-hit #{building.address[0].address}
-								div.col-sm-3.col-xs-5.inline.search-hit #{building.address[0].city}
-								div.col-sm-2.inline.search-hit.disapear #{building.address[0].province}
-								div.col-sm-2.inline.search-hit.disapear #{building.address[0].state}
+								div.col-sm-4.col-xs-6.inline.search-hit #{building.address.address}
+								div.col-sm-3.col-xs-5.inline.search-hit #{building.address.city}
+								div.col-sm-2.inline.search-hit.disapear #{building.address.province}
+								div.col-sm-2.inline.search-hit.disapear #{building.address.state}
 			div(id="collapse#{building._id}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading#{building._id}")
 				div.panel-body
 					div.table.bs-callout-info.bs-callout
@@ -63,3 +63,27 @@ block content
 			div(class="notvisible consult-clean-turn" data-clean-turn="clean-turn-#{building._id}-#{building.cleanTurn}")
 		else
 			li=t('admin_no_buildings')
+		div(class="modal fade" id="errorModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true")
+			div.modal-dialog
+				div.modal-content
+					div.modal-header
+						button(type="button" class="close" data-dismiss="modal")
+							span(aria-hidden="true") &times;
+							span.sr-only Close
+						h4.modal-title#myModalLabel=t('admin_admin_error_modal_title')
+					div.modal-body
+						p=t('admin_admin_error_modal_body')
+						p#errorModal_p
+					div.modal-footer
+						button(type="button" class="btn btn-default" data-dismiss="modal") Close
+		div(class="modal fade" id="successModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true")
+			div.modal-dialog
+				div.modal-content
+					div.modal-header
+						button(type="button" class="close" data-dismiss="modal")
+							span(aria-hidden="true") &times;
+							span.sr-only Close
+						h4.modal-title#myModalLabel=t('admin_admin_success_modal_title')
+					div.modal-body=t('admin_admin_success_modal_body')
+					div.modal-footer
+						button(type="button" class="btn btn-default" data-dismiss="modal") Close
