--- a/views/buildings/choose_building - copia.jade
+++ b/views/buildings/choose_building - copia.jade
@@ -20,9 +20,9 @@ block content
 							div.row
 								div.col-xs-1
 									span.glyphicon.glyphicon-map-marker
-								div.col-xs-5.inline.search-hit #{building.address[0].address}
-								div.col-xs-1.inline.search-hit #{building.address[0].city}
-								div.col-xs-2.inline.search-hit #{building.address[0].province}
+								div.col-xs-5.inline.search-hit #{building.address.address}
+								div.col-xs-1.inline.search-hit #{building.address.city}
+								div.col-xs-2.inline.search-hit #{building.address.province}
 								div.col-xs-3.inline.search-hit #{building._id}
 			div(id="collapse#{building._id}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading#{building._id}")
 				div.panel-body
