--- a/views/users/signup.jade
+++ b/views/users/signup.jade
@@ -1,6 +1,4 @@
 include ../layout
-	block scripts
-		script(type='text/javascript', src='/javascripts/user/sign.js')
 	block content
 		div.box-form
 			h2=t('user_signup_wellcome')
@@ -37,28 +35,24 @@ include ../layout
 				div.form-group
 					label(for="rol-select" class="col-xs-4 control-label") #{t('user_signup_fill_rol')}
 					div(id='rol-select' class='btn-group' data-toggle='buttons')
-						label.btn.btn-primary#Admin
-							input(type='radio' name='rol' class="rol-select-class"  value="Admin" required)
+						label(class="btn btn-primary" id="modal"  data-toggle="modal" data-target="#myModal")
+							input(type='radio' name='rol' class="rol-select-class" value="Admin" required)
 							p=t('nav_admin')
 						label.btn.btn-primary
 							input(type='radio' name='rol' class="rol-select-class"  value="finalUser" required)
 							p=t('nav_user')
 				div.form-group
-					label(class="col-xs-4 control-labe" for="lang") #{t('user_lang')}
-					div(class="btn-group" id="lang" data-toggle="buttons")
-						label.btn.btn-primary
-							input(type="radio" name="lang" id="es" autocomplete="off" data-value="es" required) 
-							|Español
-						label.btn.btn-primary
-							input(type="radio" name="lang" id="es_va" autocomplete="off" data-value="es_va" required) 
-							|Valencià
-						label.btn.btn-primary
-							input(type="radio" name="lang" id="en" autocomplete="off" data-value="en" required) 
-							|English
-				div.form-group
 					div.col-md-offset-2
 						input(id="sign_log_button" class="btn button btn-default" data-type="new_user" type="submit" value="#{t('user_signup_send_button')}")
-		div#alert-admin.hide.ocuppy-all
-			div.bs-callout.bs-callout-danger.bs-callout-danger-danger
-				h4=t('user_admin_power_title')
-				p=t('user_admin_power')
+			div(class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true")
+				div.modal-dialog
+					div.modal-content
+						div.modal-header
+							button(type="button" class="close" data-dismiss="modal")
+								span(aria-hidden="true") &times;
+								span.sr-only Close
+							h4.modal-title#myModalLabel=t('user_admin_power_title')
+						div.modal-body
+								p=t('user_admin_power')
+						div.modal-footer
+							button(type="button" class="btn btn-default" data-dismiss="modal") Close
